Add translation for additional strings

--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -1,5 +1,5 @@
 ﻿; openBVE interface language configuration file
-; last updated: 2016-03-06
+; last updated: 2016-06-23
 ; by Marc Riera Irigoyen
 
 [program]
@@ -20,9 +20,12 @@ options = Configuració
 homepage = Visita el lloc web oficial
 updates = Comprova actualitzacions
 updates_invalid = No s'ha pogut establir la connexió amb el servidor. No s'ha pogut obtenir la informació de la versió.
-updates_old = Ja teniu l'última versió desponible.
+updates_old = Ja teniu l'última versió disponible.
 updates_new = La nova versió [version] ([date]) ja està disponible al lloc web oficial.
 close = Surt
+packages = Gestor de paquets
+reportbug = Informa d'un error
+about = Quant a OpenBVE
 
 [mode]
 arcade = Arcade
@@ -63,7 +66,7 @@ route_gradient = Desnivells
 route_settings = Configuració
 route_settings_encoding = Codificació:
 route_settings_encoding_preview = Previsualització:
-route_processing = Processant la ruta, espereu.....
+route_processing = Processant la ruta, espereu...
 train = Tren
 train_selection = Selecció
 train_addons = Extensions
@@ -77,7 +80,7 @@ train_settings = Configuració
 train_settings_encoding = Codificació:
 train_settings_encoding_preview = Previsualització:
 train_notfound = No s'ha pogut trobar el tren predeterminat:\n\n
-train_pluginnotsupported = --- Aquest tren utilitza una extensió de sistema de seguretat incompatible amb vostre sistema operatiu. S'utilitzaran els sistemes ATS/ATC per defecte, que poden ser incompatibles. ---
+train_pluginnotsupported = --- Aquest tren utilitza una extensió de sistema de seguretat incompatible amb el vostre sistema operatiu. S'utilitzaran els sistemes ATS/ATC per defecte, que poden ser incompatibles. ---
 start = Inicia
 start_mode = Mode de conducció:
 start_start = Inicia
@@ -113,84 +116,26 @@ blackbox_format_text = Text formatat
 blackbox_export = Exporta...
 
 [packages]
-proceed = Proceed...
-proceed_anyway = Proceed Anyway
-processing = Processing, please wait...
-shownlist = These are shown in the list below:
-selection_none = No package selected.
-selection_none_website = No website provided.
-list = Installed Packages
-list_type = Select the type of packages you wish to view:
-install = Install
-install_button = Install Package
-install_header = Install a Package
-install_invalid = This file does not appear to be a valid openBVE package.
-install_version_error = Package Version Error
-install_version_new = The selected package is already installed, and is a newer version.
-install_version_old = The selected package is already installed, and is an older version.
-install_version_same = The selected package is already installed, and is an identical version.
-install_success = Package installation was successful.
-install_success_header = Installation Successful
-install_success_files = A list of files installed is shown below:
-install_select = Select Package......
-install_dependancies_unmet = The current package has unmet dependancies.
-install_dependancies_unmet_header = Dependancy Error
-install_dependancies_broken = The following dependancies may be broken by this action:
-creation_button = Create Package
-creation_header = Create a Package
-creation_saveas_button = Save As...
-creation_saveas_label = Save package as:
-creation_dependancies = Select Dependancies
-creation_dependancies_add = Add Dependancy
-creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
-creation_reccommends_add = Add Reccomendation
-creation_clearselection = Clear Selection
-creation_additems = Add Item(s)
-creation_selecteditems = The following files and folders will be packaged:
-creation_new_guid = The new package has been assinged the following GUID:
-creation_header = Enter Package Details
-creation_name = Please enter a package name.
-creation_author = Please enter a package author.
-creation_description = Please enter a package description.
-creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
-creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
-creation_success = Package creation was successful.
-creation_success_header = Package Creation Successful
-creation_success_files = The following files were added to your package:
-creation_proceed = Proceed......
-creation_invalid_filename = The selected filename is invalid- Please retry.
-creation_new_id = The new package has been assinged the following GUID:
-creation_replace_id = Replacing the package with the following GUID:
-creation_save = Save Package
-replace_select = Replace this Package
-replace_choose = Please select the package you wish to replace:
-type_route = Route
-type_train = Train
-type_other = Other
-type_select = Please select the package type:
-uninstall_failure = Unfortunately, uninstallation of this package failed.
-uninstall_failure_header = Uninstallation Failed
-uninstall_success = Uninstallation of this package was successful.
-uninstall_success_header = Uninstallation Successful
-uninstall_log = A log is shown below:
-uninstall_button = Uninstall Package
-uninstall_broken = Some existing packages may be broken by this action.
-uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
-database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
-version_new = New version:
-version_current = Current version:
+title = Gestiona els paquets
 proceed = Continua...
 proceed_anyway = Continua igualment
 processing = Processant, espereu...
+unknown_file = Fitxer desconegut...
 shownlist = Apareixen al llistat següent:
-selection_none = No s'ha seleccionat cap paquet.
-selection_none_website = No s'ha indicat cap lloc web.
+selection_none = No hi ha res seleccionat
+selection_none_website = No hi ha res seleccionat
 list = Paquets instal·lats
 list_type = Seleccioneu el tipus de paquet que voleu veure:
+list_name = Nom
+list_version = Versió
+list_minimum = Versió mínima
+list_maximum = Versió màxima
+list_author = Autor
+list_website = Lloc web
 install = Instal·la
 install_button = Instal·la
 install_header = Instal·la un paquet
-install_invalid = Aquest fitxer no és un paquet per a OpenBVE vàlid.
+install_invalid = Aquest fitxer no és un paquet vàlid per a OpenBVE.
 install_version_error = Error en la versió del paquet
 install_version_new = El paquet seleccionat ja es troba instal·lat, i es troba en una versió posterior.
 install_version_old = El paquet seleccionat ja es troba instal·lat, i es troba en una versió anterior.
@@ -198,11 +143,16 @@ install_version_same = El paquet seleccionat ja es troba instal·lat, i es troba
 install_success = S'han instal·lat els paquets correctament.
 install_success_header = Instal·lació completada
 install_success_files = Llistat de fitxers instal·lats:
-install_select = Selecciona un paquet......
+install_select = Selecciona un paquet...
 install_dependancies_unmet = El paquet actual té dependències que no es poden resoldre.
 install_dependancies_unmet_header = Error de dependències
 install_dependancies_broken = Les següents dependències quedaran trencades si continueu:
-creation_button = Nou paquet
+install_name = Nom del paquet:
+install_author = Autor del paquet:
+install_version = Versió del paquet:
+install_website = Lloc web del paquet:
+install_description = Descripció del paquet:
+creation_button = Nou
 creation_header = Crea un paquet
 creation_saveas_button = Desa...
 creation_saveas_label = Desa a:
@@ -215,7 +165,7 @@ creation_additems = Afegir fitxers
 creation_selecteditems = Es crearà un paquet amb els fitxers i carpetes següents:
 creation_new_guid = El nou paquet té assignat el següent GUID:
 creation_header = Detalls del paquet
-creation_name =Nom del paquet.
+creation_name = Nom del paquet.
 creation_author = Autor del paquet.
 creation_description = Descripció del paquet.
 creation_version = Versió (número de versió amb aquest format: 1.0.0)
@@ -223,14 +173,17 @@ creation_version_invalid = Heu triat un número de versió no vàlid. \r\n Torne
 creation_success = S'ha creat el paquet correctament.
 creation_success_header = Paquet creat correctament
 creation_success_files = S'han afegit els fitxers següents al paquet:
-creation_proceed = Continua......
+creation_proceed = Continua...
 creation_invalid_filename = El nom del fitxer no és vàlid. \r\n Torneu-ho a intentar
 creation_new_id = El nou paquet té assignat el següent GUID:
 creation_replace_id = Reeemplaça el paquet amb el GUID següent:
 creation_save = Desa el paquet
+creation_replace = Voleu reemplaçar un paquet ja existent?
+creation_yes = Sí
+creation_no = No
 replace_select = Reemplaça aquest paquet
 replace_choose = Seleccioneu el paquet que voleu reemplaçar:
-replace_noneavailable = No packages are currently installed.
+replace_noneavailable = No hi ha paquets instal·lats.
 type_route = Ruta
 type_train = Tren
 type_other = Altres
@@ -243,10 +196,11 @@ uninstall_log = A continuació es mostra el registre:
 uninstall_button = Esborra
 uninstall_broken = Alguns paquets instal·lats quedaran trencats si continueu.
 uninstall_missing_xml = No s'ha pogut esborrar el paquet seleccionat. \r\n No s'ha trobat la llista de fitxers XML.
-uninstall_database_remove = Do you wish to remove this package from the database?
+uninstall_database_remove = Voleu esborrar aquest paquet de la base de dades?
 database_save_error = S'ha produït un error quan es desava la base de dades dels paquets. \r\n Comproveu els permisos d'escriptura.
 version_new = Nova versió:
 version_current = Versió actual:
+success = Finished!
 
 [controls]
 title = Personalitza els controls
@@ -276,7 +230,7 @@ selection_joystick = Joystick:
 selection_joystick_assignment = Assignació:
 selection_joystick_assignment_grab = Premeu aquí per activar el moviment del joystick per seleccionar automàticament el botó, l'eix o la palanca desitjada.
 selection_joystick_assignment_grab_normal = Premeu un botó o mou un eix o palanca en la direcció desitjada...
-selection_joystick_assignment_grab_fullaxis = Moveu un eix en la direcció "augmentar" o "tracció"...
+selection_joystick_assignment_grab_fullaxis = Moveu un eix en la direcció "incrementar" o "tracció"...
 attached = Joysticks connectats
 assignment_keyboard = Teclat
 assignment_keyboard_shift = Shift +\x20
@@ -326,8 +280,8 @@ quality_interpolation_mode_bilinear = Bilinear
 quality_interpolation_mode_nearestmipmap = Veí més proper (mipmapping)
 quality_interpolation_mode_bilinearmipmap = Bilinear (mipmapping)
 quality_interpolation_mode_trilinearmipmap = Trilinear (mipmapping)
-quality_interpolation_mode_anisotropic = Filtrat anisotròpic
-quality_interpolation_anisotropic_level = Nivell de filtrat anisotròpic:
+quality_interpolation_mode_anisotropic = Filtratge anisotròpic
+quality_interpolation_anisotropic_level = Nivell de filtratge anisotròpic:
 quality_interpolation_antialiasing_level = Nivell d'anti-aliasing:
 quality_interpolation_transparency = Transparència:
 quality_interpolation_transparency_sharp = Accentuada
@@ -370,10 +324,12 @@ other_timetable_mode_none = Cap
 other_timetable_mode_default = Per defecte
 other_timetable_mode_autogenerated = Horari autogenerat
 other_timetable_mode_prefercustom = Horari personalitzat
-package_route_directory = Route installation directory:
-package_train_directory = Train installation directory:
-package_other_directory = Other items installation directory:
-package_compression = Package compression format:
+package_route_directory = Carpeta d'instal·lació de rutes:
+package_train_directory = Carpeta d'instal·lació de trens:
+package_other_directory = Carpeta d'instal·lació d'altres paquets:
+package_compression = Format de compressió dels paquets:
+page_previous = Pàgina anterior...
+page_next = Pàgina següent...
 
 [dialog]
 csvfiles = Fitxers CSV
@@ -406,13 +362,13 @@ loading_route = Carregant la ruta...
 loading_train = Carregant el tren...
 almost = Gairebé a punt per començar
 almost_filesnotfound = Fitxers no trobats:
-almost_help_filesnotfound = S'han trobat alguns conflictes en carregar la ruta i el tren.\r\n\r\nCom que no s'han trobat alguns fitxers, la ruta o el tren poden no aparèixer de la forma desitjada. Proveu de tornar a descarregar la ruta i el tren per comprovar que teniu una distribució completa.\r\n\r\nLa següent llista de conflictes us pot donar informació addicional. Encara podeu iniciar la ruta fent clic al botó "Ignora".
-almost_help_general = S'han trobat alguns conflictes en carregar la ruta i el tren. Si en sou el creador, valdria la pena fer una ullada a la següent llista de conflictes.\r\n\r\nCom a usuari habitual, podeu fer clic a "Ignora" per començar el joc.
+almost_help_filesnotfound = S'han trobat alguns problemes en carregar la ruta i el tren.\r\n\r\nCom que no s'han trobat alguns fitxers, la ruta o el tren poden no aparèixer de la forma desitjada. Proveu de tornar a descarregar la ruta i el tren per comprovar que teniu una distribució completa.\r\n\r\nLa següent llista de conflictes us pot donar informació addicional. Encara podeu iniciar la ruta fent clic al botó "Ignora".
+almost_help_general = S'han trobat alguns problemes en carregar la ruta i el tren. Si en sou el creador, valdria la pena donar una ullada a la següent llista de conflictes.\r\n\r\nCom a usuari habitual, podeu fer clic a "Ignora" per començar el joc.
 almost_show = Veure els conflictes
 problems = Problemes
 problems_type = Tipus
 problems_description = Descripció
-save = Desa informe...
+save = Desa l'informe...
 ignore = Ignora
 cancel = Cancel·la
 
@@ -426,9 +382,9 @@ departuretime = Sortida
 [message]
 delimiter = \x20
 signal_proceed = Podeu continuar a [speed] [unit] amb màxima precaució.
-signal_stop = Heu ultrapassat un semàfor en vermell. Activeu immediatament els frens d'emergència i atureu el tren.
-signal_overspeed = El semàfor marca un límit de [limit] [unit]. Actualment aneu a [speed] [unit]. Reduïu la velocitat.
-route_overspeed = El senyal marca un límit de [limit] [unit]. Actualment aneu a [speed] [unit]. Reduïu la velocitat.
+signal_stop = Heu ultrapassat un senyal en vermell. Activeu immediatament els frens d'emergència i atureu el tren.
+signal_overspeed = El senyal marca un límit de [limit] [unit]. Actualment aneu a [speed] [unit]. Reduïu la velocitat.
+route_overspeed = El límit de velocitat és de [limit] [unit]. Actualment aneu a [speed] [unit]. Reduïu la velocitat.
 station_arrival = Heu arribat a [name].
 station_arrival_late = Heu arribat a [name] amb [time] de retard.
 station_arrival_early = Heu arribat a [name] amb [time] d'antelació.
@@ -464,7 +420,7 @@ mousegrab_off = Rotació de la càmera amb el ratolí: desactivada
 
 [score]
 overspeed = Excés de velocitat
-redsignal = Semàfor vermell ultrapassat
+redsignal = Senyal en vermell ultrapassat
 toppling = Bolcada
 derailed = Descarrilment
 discomfort = Passatgers enfadats
@@ -492,6 +448,7 @@ rating = La vostra qualificació:
 unknown = Desconegut
 
 [menu]
+back = ← Enrere
 resume = Continua la simulació
 jump = Salta a l'estació
 exit = Surt al menú principal
@@ -505,6 +462,12 @@ quit_yes = Sí
 back = ← Enrere
 customize_controls = Personalitza els controls
 assign = Premeu qualsevol tecla o moveu un eix d'un joystick per configurar aquest control...
+keyboard = Teclat
+joystick = Joystick
+joystick_notavailable = N/D
+joystickdirection_positive = Positiu
+joystickdirection_negative = Negatiu
+assignment_current = Assignació actual:
 
 ; ----- quick reference -----
 
@@ -630,7 +593,7 @@ MISC_QUIT = Surt del simulador
 MISC_INTERFACE = Canvia entre diferents modes d'interfície
 MISC_BACKFACE = Activa o desactiva l'eliminació de cares posteriors
 MISC_CPUMODE = Activa o desactiva el mode de CPU reduït
-DEBUG_WIREFRAME = Activa o desactiva el mode malla (wireframe)
+DEBUG_WIREFRAME = Activa o desactiva el mode de malla (wireframe)
 DEBUG_NORMALS = Mostra o oculta les normals dels vèrtexs
 DEBUG_BRAKE = Mostra o oculta el sistema de fre
 ROUTE_INFORMATION = Mostra o oculta la finestra d'informació de la ruta
@@ -638,25 +601,25 @@ ROUTE_INFORMATION = Mostra o oculta la finestra d'informació de la ruta
 ;------ New controls ----
 
 ;;Common
-WIPER_SPEED_UP = Increases the speed of the windscreen wipers
-WIPER_SPEED_DOWN = Decreases the speed of the windscreen wipers
-FILL_FUEL = Fills fuel
-HEADLIGHTS = Toggles the train headlights
+WIPER_SPEED_UP = Incrementa la velocitat de l'eixugaparabrisa
+WIPER_SPEED_DOWN = Redueix la velocitat de l'eixugaparabrisa
+FILL_FUEL = Omple el dipòsit de combustible
+HEADLIGHTS = Canvia entre els diferents modes de fars del tren
 ;;Steam engine
-LIVE_STEAM_INJECTOR = Activates or deactivates the live steam injector
-EXHAUST_STEAM_INJECTOR = Activates or deactivates the exhaust steam injector
-INCREASE_CUTOFF = Increases the cutoff
-DECREASE_CUTOFF = Decreases the cutoff
-BLOWERS = Activates or deactivates the blowers
+LIVE_STEAM_INJECTOR = Activa o desactiva l'injector de vapor viu
+EXHAUST_STEAM_INJECTOR = Activa o desactiva l'injector de vapor d'escapament
+INCREASE_CUTOFF = Incrementa el punt de tall
+DECREASE_CUTOFF = Redueix el punt de tall
+BLOWERS = Activa o desactiva els bufadors
 ;;Diesel engine
-ENGINE_START = Starts the engine
-ENGINE_STOP = Stops the engine
-GEAR_UP = Shifts up a gear in a train fitted with a gearbox
-GEAR_DOWN = Shifts down a gear in a train fitted with a gearbox
+ENGINE_START = Arrenca el motor
+ENGINE_STOP = Atura el motor
+GEAR_UP = Incrementa la velocitat en una posició en un tren amb caixa de canvis
+GEAR_DOWN = Redueix la velocitat en una posició en un tren amb caixa de canvis
 ;;Electric engine
-RAISE_PANTOGRAPH = Raises the pantograph
-LOWER_PANTOGRAPH = Lowers the pantograph
-MAIN_BREAKER = Toggles the main breaker
+RAISE_PANTOGRAPH = Aixeca el pantògraf
+LOWER_PANTOGRAPH = Abaixa el pantògraf
+MAIN_BREAKER = Activa o desactiva el disjuntor principal
 
 ; ----- keys -----
 
