--- a/openBVE/OpenBve/Data/Languages/hu-HU.cfg
+++ b/openBVE/OpenBve/Data/Languages/hu-HU.cfg
@@ -24,6 +24,8 @@ updates_old = A legújabb programverziót használja.
 updates_new = Új programváltozat tölthető le a honlapról: [version] ([date]).
 close = Bezárás
 packages = Package Management
+reportbug = Report Problem
+about = About
 
 [mode]
 arcade = Játékgépszerű
@@ -114,14 +116,22 @@ blackbox_format_text = Formázott szöveg
 blackbox_export = Exportálás...
 
 [packages]
+title = Package Management
 proceed = Proceed...
 proceed_anyway = Proceed Anyway
 processing = Processing, please wait...
+unknown_file = Unknown File...
 shownlist = These are shown in the list below:
 selection_none = No package selected.
 selection_none_website = No website provided.
 list = Installed Packages
 list_type = Select the type of packages you wish to view:
+list_name = Name
+list_version = Version
+list_minimum = Minimum Version
+list_maximum = Maximum Version
+list_author = Author
+list_website = Website
 install = Install
 install_button = Install Package
 install_header = Install a Package
@@ -137,6 +147,11 @@ install_select = Select Package......
 install_dependancies_unmet = The current package has unmet dependancies.
 install_dependancies_unmet_header = Dependancy Error
 install_dependancies_broken = The following dependancies may be broken by this action:
+install_name = Package Name:
+install_author = Package Author:
+install_version = Package Version:
+install_website = Package Website:
+install_description = Package Description:
 creation_button = Create Package
 creation_header = Create a Package
 creation_saveas_button = Save As...
@@ -163,6 +178,9 @@ creation_invalid_filename = The selected filename is invalid- Please retry.
 creation_new_id = The new package has been assinged the following GUID:
 creation_replace_id = Replacing the package with the following GUID:
 creation_save = Save Package
+creation_replace = Is this to replace an existing package?
+creation_yes = Yes
+creation_no = No
 replace_select = Replace this Package
 replace_choose = Please select the package you wish to replace:
 replace_noneavailable = No packages are currently installed.
@@ -182,6 +200,7 @@ uninstall_database_remove = Do you wish to remove this package from the database
 database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 version_new = New version:
 version_current = Current version:
+success = Finished!
 
 [controls]
 title = A kezelőszervek beállítása
@@ -309,6 +328,8 @@ package_route_directory = Route installation directory:
 package_train_directory = Train installation directory:
 package_other_directory = Other items installation directory:
 package_compression = Package compression format:
+page_previous = Previous Page...
+page_next = Next Page...
 
 [dialog]
 csvfiles = CSV fájl
@@ -427,6 +448,7 @@ rating = Eredmény:
 unknown = Ismeretlen
 
 [menu]
+back = ← Back
 resume = A játék folytatása
 jump = Állomáshoz ugrás
 exit = Kilépés a főmenübe
@@ -440,6 +462,12 @@ quit_yes = Igen
 back = ← Back
 customize_controls = Customise controls
 assign = Please press any key or move a joystick axis to set this control...
+keyboard = Keyboard
+joystick = Joystick
+joystick_notavailable = N/A
+joystickdirection_positive = Positive
+joystickdirection_negative = Negative
+assignment_current = Current assignment:
 
 ; ----- quick reference -----
 
