Fix: Minumum and maximum versions were reversed when checking dependancies.
Change: Add labels to dependancy/ reccomendation box
Fix: Reccomendations weren't checked.

--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -147,6 +147,8 @@ install_select = Selecciona un paquet...
 install_dependancies_unmet = El paquet actual té dependències que no es poden resoldre.
 install_dependancies_unmet_header = Error de dependències
 install_dependancies_broken = Les següents dependències quedaran trencades si continueu:
+install_reccomends_unmet = The following packages are reccomended, but not installed:
+install_reccomends_unmet_header = Reccomended Packages
 install_name = Nom del paquet:
 install_author = Autor del paquet:
 install_version = Versió del paquet:
