--- a/openBVE/OpenBve/Data/Languages/nl-NL.cfg
+++ b/openBVE/OpenBve/Data/Languages/nl-NL.cfg
@@ -147,6 +147,8 @@ install_select = Select Package......
 install_dependancies_unmet = The current package has unmet dependancies.
 install_dependancies_unmet_header = Dependancy Error
 install_dependancies_broken = The following dependancies may be broken by this action:
+install_reccomends_unmet = The following packages are reccomended, but not installed:
+install_reccomends_unmet_header = Reccomended Packages
 install_name = Package Name:
 install_author = Package Author:
 install_version = Package Version:
