Fixed critical bug with dependancies
The program would crash when installing packages depending on others.

--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -133,7 +133,7 @@ list_maximum = Versió màxima
 list_author = Autor
 list_website = Lloc web
 install = Instal·la
-install_button = Instal·la
+install_button = Instal·la un paquet
 install_header = Instal·la un paquet
 install_invalid = Aquest fitxer no és un paquet vàlid per a OpenBVE.
 install_version_error = Error en la versió del paquet
@@ -154,14 +154,14 @@ install_author = Autor del paquet:
 install_version = Versió del paquet:
 install_website = Lloc web del paquet:
 install_description = Descripció del paquet:
-creation_button = Nou
+creation_button = Nou paquet
 creation_header = Crea un paquet
 creation_saveas_button = Desa...
 creation_saveas_label = Desa a:
 creation_dependancies = Seleccioneu les dependències
-creation_dependancies_add = Afegeix dependències
+creation_dependancies_add = Afegeix una dependència
 creation_dependancies_nextstep = Ara podreu assignar els detalls i les dependències del paquet.
-creation_reccommends_add = Afegeix recomanació
+creation_reccommends_add = Afegeix una recomanació
 creation_clearselection = Esborra la selecció
 creation_additems = Afegir fitxers
 creation_selecteditems = Es crearà un paquet amb els fitxers i carpetes següents:
@@ -176,7 +176,7 @@ creation_success = S'ha creat el paquet correctament.
 creation_success_header = Paquet creat correctament
 creation_success_files = S'han afegit els fitxers següents al paquet:
 creation_proceed = Continua...
-creation_invalid_filename = El nom del fitxer no és vàlid. \r\n Torneu-ho a intentar
+creation_invalid_filename = El nom del fitxer no és vàlid. \r\n Torneu-ho a intentar.
 creation_new_id = El nou paquet té assignat el següent GUID:
 creation_replace_id = Reeemplaça el paquet amb el GUID següent:
 creation_save = Desa el paquet
@@ -195,7 +195,7 @@ uninstall_failure_header = Error de desinstal·lació
 uninstall_success = S'ha esborrat el paquet correctament.
 uninstall_success_header = Paquet esborrat correctament
 uninstall_log = A continuació es mostra el registre:
-uninstall_button = Esborra
+uninstall_button = Esborra un paquet
 uninstall_broken = Alguns paquets instal·lats quedaran trencats si continueu.
 uninstall_missing_xml = No s'ha pogut esborrar el paquet seleccionat. \r\n No s'ha trobat la llista de fitxers XML.
 uninstall_database_remove = Voleu esborrar aquest paquet de la base de dades?
@@ -204,6 +204,10 @@ version_new = Nova versió:
 version_current = Versió actual:
 success = Completat!
 selected = Paquets seleccionats
+dependancy = Dependència
+recommendation = Recomanació
+
+[controls]
 
 [controls]
 title = Personalitza els controls
