--- a/openBVE/OpenBve/Data/Languages/en-GB.cfg
+++ b/openBVE/OpenBve/Data/Languages/en-GB.cfg
@@ -147,8 +147,8 @@ install_select = Select Package......
 install_dependancies_unmet = The current package has unmet dependancies.
 install_dependancies_unmet_header = Dependancy Error
 install_dependancies_broken = The following dependancies may be broken by this action:
-install_reccomends_unmet = The following packages are reccomended, but not installed:
-install_reccomends_unmet_header = Reccomended Packages
+install_reccomends_unmet = The following packages are recommended, but not installed:
+install_reccomends_unmet_header = Recommended Packages
 install_name = Package Name:
 install_author = Package Author:
 install_version = Package Version:
@@ -161,11 +161,11 @@ creation_saveas_label = Save package as:
 creation_dependancies = Select Dependancies
 creation_dependancies_add = Add Dependancy
 creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
-creation_reccommends_add = Add Reccomendation
+creation_reccommends_add = Add Recommendation
 creation_clearselection = Clear Selection
 creation_additems = Add Item(s)
 creation_selecteditems = The following files and folders will be packaged:
-creation_new_guid = The new package has been assinged the following GUID:
+creation_new_guid = The new package has been assigned the following GUID:
 creation_header = Enter Package Details
 creation_name = Please enter a package name.
 creation_author = Please enter a package author.
@@ -177,7 +177,7 @@ creation_success_header = Package Creation Successful
 creation_success_files = The following files were added to your package:
 creation_proceed = Proceed......
 creation_invalid_filename = The selected filename is invalid- Please retry.
-creation_new_id = The new package has been assinged the following GUID:
+creation_new_id = The new package has been assigned the following GUID:
 creation_replace_id = Replacing the package with the following GUID:
 creation_save = Save Package
 creation_replace = Is this to replace an existing package?
@@ -204,6 +204,8 @@ version_new = New version:
 version_current = Current version:
 success = Finished!
 selected = Selected Packages
+dependancy = Dependancy
+recommendation = Recommendation
 
 [controls]
 title = Customize controls
