--- a/openBVE/OpenBve/Data/Languages/ko-KR.cfg
+++ b/openBVE/OpenBve/Data/Languages/ko-KR.cfg
@@ -204,6 +204,8 @@ version_new = New version:
 version_current = Current version:
 success = Finished!
 selected = Selected Packages
+dependancy = Dependancy
+recommendation = Recommendation
 
 [controls]
 title = 조작 설정
