Added translatable strings
- All the strings in package management can now be translated
- Final tweaks to package management interface
- Added button pair navigation to package management

--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -1,5 +1,5 @@
 ﻿; openBVE interface language configuration file
-; last updated: 2016-07-02
+; last updated: 2016-07-06
 ; by Marc Riera Irigoyen
 
 [program]
@@ -132,6 +132,7 @@ list_minimum = Versió mínima
 list_maximum = Versió màxima
 list_author = Autor
 list_website = Lloc web
+list_packagetype = Tipus
 install = Instal·la
 install_button = Instal·la un paquet
 install_header = Instal·la un paquet
@@ -160,6 +161,7 @@ creation_saveas_button = Desa...
 creation_saveas_label = Desa a:
 creation_dependancies = Seleccioneu les dependències
 creation_dependancies_add = Afegeix una dependència
+creation_dependancies_remove = Elimina
 creation_dependancies_nextstep = Ara podreu assignar els detalls i les dependències del paquet.
 creation_reccommends_add = Afegeix una recomanació
 creation_clearselection = Esborra la selecció
@@ -206,8 +208,16 @@ success = Completat!
 selected = Paquets seleccionats
 dependancy = Dependència
 recommendation = Recomanació
-
-[controls]
+error_action = Seleccioneu què voleu fer amb el paquet:
+error_overwrite = Sobreescriu-lo
+error_replace = Reemplaça'l
+button_next = Següent >
+button_back = < Enrere
+button_cancel = Cancel·la
+button_install = Instal·la
+button_create = Crea
+button_ignore = Ignora
+button_abort = Avorta
 
 [controls]
 title = Personalitza els controls
