--- a/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
+++ b/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
@@ -132,6 +132,7 @@ list_minimum = Minimum Version
 list_maximum = Maximum Version
 list_author = Author
 list_website = Website
+list_packagetype = Type
 install = Install
 install_button = Install Package
 install_header = Install a Package
@@ -160,6 +161,7 @@ creation_saveas_button = Save As...
 creation_saveas_label = Save package as:
 creation_dependancies = Select Dependancies
 creation_dependancies_add = Add Dependancy
+creation_dependancies_remove = Remove
 creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
 creation_reccommends_add = Add Reccomendation
 creation_clearselection = Clear Selection
@@ -206,6 +208,16 @@ success = Finished!
 selected = Selected Packages
 dependancy = Dependancy
 recommendation = Recommendation
+error_action = Please select the action you wish to take:
+error_overwrite = Overwrite
+error_replace = Replace
+button_next = Next >
+button_back = < Back
+button_cancel = Cancel
+button_install = Install
+button_create = Create
+button_ignore = Ignore
+button_abort = Abort
 
 [controls]
 title = Nastavení ovládacích prvků
