Initial work on signalling sections.
Preliminary work pertaining to this: https://github.com/leezer3/OpenBVE/issues/79
* Move most components of a signalling section to the openBVE API.
* Improve comments.
* Use a specific method to set the value of a section and a read-only variable for when we wish to get it's current aspect.

--- a/openBVE/OpenBveApi/OpenBveApi.csproj
+++ b/openBVE/OpenBveApi/OpenBveApi.csproj
@@ -76,6 +76,7 @@
     <Compile Include="SharedMesh.cs">
       <DependentUpon>Objects.cs</DependentUpon>
     </Compile>
+    <Compile Include="Signalling.cs" />
     <Compile Include="Textures.TextOverlay.cs" />
     <Compile Include="Sounds.cs" />
     <Compile Include="Textures.cs" />
