Fix: Improve test for write permissions when creating a package.
Tweak positioning of checkboxes to be consistant.

--- a/openBVE/OpenBve/Data/Languages/en-GB.cfg
+++ b/openBVE/OpenBve/Data/Languages/en-GB.cfg
@@ -51,6 +51,10 @@ fullscreen_switch2 = Please check your fullscreen resolution settings.
 route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
 plugin_failure1 = The train plugin [plugin] failed to load. 
 plugin_failure2 = The built-in ATS/ ATC systems will be used instead, which may cause issues.
+package_filename_empty = Attempted to create a package with an empty filename.
+package_directory_missing = The directory in which you attempted to save the package file does not exist: \r \n
+package_directory_nowrite = No write access available in the directory in which you attempted to save the package file: \r \n
+package_file_generic = Failed to create the following file: \r \n
 
 [start]
 title = Start new game
@@ -218,6 +222,10 @@ button_install = Install
 button_create = Create
 button_ignore = Ignore
 button_abort = Abort
+filename_empty = Attempted to create a package with an empty filename.
+directory_missing = The directory in which you attempted to save the package file does not exist: \r \n
+directory_nowrite = No write access available in the directory in which you attempted to save the package file: \r \n
+file_generic = Failed to create the following file: \r \n
 
 [controls]
 title = Customize controls
