--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -218,6 +218,10 @@ button_install = Instal·la
 button_create = Crea
 button_ignore = Ignora
 button_abort = Avorta
+filename_empty = Attempted to create a package with an empty filename.
+directory_missing = The directory in which you attempted to save the package file does not exist: \r \n
+directory_nowrite = No write access available in the directory in which you attempted to save the package file: \r \n
+file_generic = Failed to create the following file: \r \n
 
 [controls]
 title = Personalitza els controls
