Add some generic error handling to package operations.

--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -144,6 +144,8 @@ install_version_same = Ja hi ha instal·lada la mateixa versió del paquet selec
 install_success = S'han instal·lat els paquets correctament.
 install_success_header = Instal·lació completada
 install_success_files = Llistat de fitxers instal·lats:
+install_failure = Unfortunately, package installation failed.
+install_failure_header = Package Installation Failed
 install_select = Selecciona un paquet...
 install_dependancies_unmet = El paquet actual té dependències que no es poden resoldre.
 install_dependancies_unmet_header = Error de dependències
@@ -177,6 +179,9 @@ creation_version_invalid = Heu triat un número de versió no vàlid. \r\n Torne
 creation_success = S'ha creat el paquet correctament.
 creation_success_header = Paquet creat correctament
 creation_success_files = S'han afegit els fitxers següents al paquet:
+creation_failure = Unfortunately, creation of your package failed.
+creation_failure_header = Package Creation Failed
+creation_failure_error = The following error was encountered:
 creation_proceed = Continua...
 creation_invalid_filename = El nom del fitxer no és vàlid. \r\n Torneu-ho a intentar.
 creation_new_id = El nou paquet té assignat el següent GUID:
