--- a/openBVE/OpenBve/Data/Languages/hu-HU.cfg
+++ b/openBVE/OpenBve/Data/Languages/hu-HU.cfg
@@ -144,6 +144,8 @@ install_version_same = A kiválasztott csomag már telepítve van és azonos ver
 install_success = A csomag telepítése sikerült.
 install_success_header = Sikeres telepítés
 install_success_files = A telepített fájlok listája alább látható:
+install_failure = Unfortunately, package installation failed.
+install_failure_header = Package Installation Failed
 install_select = Csomag kiválasztása......
 install_dependancies_unmet = A jelenlegi csomagnak nem teljesülő függőségei vannak.
 install_dependancies_unmet_header = Függőségi hiba
@@ -177,6 +179,9 @@ creation_version_invalid = Érvénytelen verziószámot adott meg. \r\n Kérjük
 creation_success = A csomag létrehozása sikeresen megtörtént.
 creation_success_header = Sikeres csomagkészítés
 creation_success_files = A következő fájlok kerültek a csomagba:
+creation_failure = Unfortunately, creation of your package failed.
+creation_failure_header = Package Creation Failed
+creation_failure_error = The following error was encountered:
 creation_proceed = Folytatás......
 creation_invalid_filename = A kiválasztott fájlnév érvénytelen - próbálja újra.
 creation_new_id = Az új csomag a következő GUID azonosítót kapta:
