--- a/openBVE/OpenBve/Data/Languages/en-GB.cfg
+++ b/openBVE/OpenBve/Data/Languages/en-GB.cfg
@@ -148,6 +148,8 @@ install_version_same = The selected package is already installed, and is an iden
 install_success = Package installation was successful.
 install_success_header = Installation Successful
 install_success_files = A list of files installed is shown below:
+install_failure = Unfortunately, package installation failed.
+install_failure_header = Package Installation Failed
 install_select = Select Package......
 install_dependancies_unmet = The current package has unmet dependancies.
 install_dependancies_unmet_header = Dependancy Error
@@ -181,6 +183,9 @@ creation_version_invalid = You have entered an invalid version number. \r\n Plea
 creation_success = Package creation was successful.
 creation_success_header = Package Creation Successful
 creation_success_files = The following files were added to your package:
+creation_failure = Unfortunately, creation of your package failed.
+creation_failure_header = Package Creation Failed
+creation_failure_error = The following error was encountered:
 creation_proceed = Proceed......
 creation_invalid_filename = The selected filename is invalid- Please retry.
 creation_new_id = The new package has been assigned the following GUID:
